feat: get deployments and get deployment
